--- a/Client/src/assets/styling/components/_repairShopHomeForm.scss
+++ b/Client/src/assets/styling/components/_repairShopHomeForm.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/colors' as *;
 @use '../abstracts/fonts' as *;
 
-form {
+.repair-shop-requests-form {
   .customer-name {
     color: $text-main;
   }
@@ -125,6 +125,146 @@ form {
 
       &:focus {
         outline: none;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .repair-shop-requests-form {
+    display: flex;
+    gap: 32px;
+    padding: 0;
+    margin-bottom: 32px;
+
+    .content-container-parent {
+      width: 100%;
+
+      .customer-name {
+        color: $text-main;
+      }
+
+      .repair-shop-form-text-container {
+        position: relative;
+        transition: all 0.2s ease-in-out;
+        margin: 5px 0 10px 0;
+        width: 100%;
+        height: 42px;
+        background-color: $el-bg-gray;
+        color: $text-main;
+        border: 2px solid $el-border-gray;
+        padding: 8px;
+        border-radius: 10px;
+        z-index: 1;
+        display: flex;
+        justify-content: space-between;
+        color: $text-main;
+        font-family: map-get($font-text-light, font-family);
+        font-weight: map-get($font-text-light, font-weight);
+        align-items: center;
+
+        .show-more-btn {
+          background: transparent;
+          border: none;
+          color: $text-main;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 42px;
+          width: 100%;
+          text-align: right;
+          padding: 10px;
+
+          &:hover {
+            cursor: pointer;
+            color: $el-active-blue;
+          }
+        }
+      }
+
+      p,
+      span {
+        font-size: 0.9rem;
+      }
+
+      hr {
+        margin: 8px 0;
+      }
+
+      span {
+        color: $text-main;
+        font-family: map-get($font-title-bold, font-family);
+        font-weight: map-get($font-title-bold, font-weight);
+      }
+
+      .repair-shop-form-text-container-extend {
+        position: relative;
+        transition: all 0.2s ease-in-out;
+        margin: 5px 0 10px 0;
+        width: 100%;
+        height: auto;
+        background-color: $el-bg-gray;
+        color: $text-main;
+        border: 2px solid $el-border-gray;
+        border-radius: 10px;
+        z-index: 1;
+        display: flex;
+        justify-content: space-between;
+        color: $text-main;
+        font-family: map-get($font-text-light, font-family);
+        font-weight: map-get($font-text-light, font-weight);
+        align-items: center;
+
+        .show-more-btn {
+          background: transparent;
+          border: none;
+          color: $text-main;
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 42px;
+          width: 100%;
+          text-align: right;
+
+          &:hover {
+            cursor: pointer;
+            color: $el-active-blue;
+          }
+        }
+
+        .top-nav-extended {
+          padding: 8px;
+        }
+
+        .message-content {
+          padding: 8px;
+        }
+
+        label {
+          padding: 8px;
+        }
+
+        .answer-label {
+          color: $text-third;
+        }
+
+        .text-editor-answer {
+          width: 100%;
+          height: 300px;
+          padding: 8px;
+          margin-top: 8px;
+          color: $text-main;
+          border: none;
+          background: transparent;
+          resize: none;
+          font-size: 0.9rem;
+          font-family: map-get($font-text-light, font-family);
+          font-weight: map-get($font-text-light, font-weight);
+
+          &:focus {
+            outline: none;
+          }
+        }
       }
     }
   }
