--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -14,4 +14,5 @@
 @import './components/repairShopHomeForm';
 
 @import './components/dialog';
+@import './components/messageDialog';
 @import './components/blueLine';
