--- a/Client/src/assets/styling/components/_userSent.scss
+++ b/Client/src/assets/styling/components/_userSent.scss
@@ -43,7 +43,7 @@
         width: 100%;
         border-radius: 15px;
         border: 2px solid $el-border-gray;
-        padding: 8px;
+        padding: 8px 8px 0 8px;
         margin-top: -14px;
 
         .user-sent-message-content-top-nav {
